--- a/index.html
+++ b/index.html
@@ -3,3 +3,11 @@ layout: default
 title: Landing Page
 subTitle: A Template by Start Bootstrap
 ---
+<div id="home">
+  <h2 style="color: silver">List Posts</h2>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
