--- a/test.html
+++ b/test.html
@@ -1,9 +1,16 @@
 ---
-layout: default
-title: CV
-subTitle: This is my Curiculum vitae
+layout: page
+title: Queen's Sailing Calendar
+permalink: /calendar/
+type: info
+header_text: Queen's Sailing Calendar
+calendar: true
 ---
-<div id="home">
-  <h2 style="color: silver">Wilfried COMTE</h2>
-
+<div class="span3">
+	<h3>List of 2013 Events</h3>
+<div id="upcoming"></div><!--/span-->
 </div>
+<div class="span9">
+	<h3>Calendar of Upcoming Events</h3>
+	<iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=60kvvarubrv958lj3snku908rg%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+</div><!--/span-->
