--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: Thinking
+subTitle: Réflexion, idée
 ---
 <div id="home">
   <h2 style="color: silver">List Posts</h2>
